login modal closes, and other things.

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container"><a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="#" class="brand"><span>NotableMind</span></a>
+        <div class="container"><a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="#" class="brand"><span>FamilyFound</span></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/"><span>Home</span></a></li>
@@ -25,7 +25,11 @@
       <div id="pages" ng-view class="row-fluid"></div>
       <div class="templates">
         <script id="personView.html" type="text/ng-template">
-          <div data-person="rootPerson" class="person top-person"></div>
+          <h1>Hello People</h1>
+          <div data-boxes="rootPerson" class="boxes"></div>
+          <div class="todos">
+            <div ng-repeat="todo in todos" data-todo="todo" class="todo"></div>
+          </div>
         </script>
         <script id="settings.html" type="text/ng-template">
           <div data-settings-manager="familyfound" class="settings-manager">
