tree is loading!

--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
       <div class="templates">
         <script id="personView.html" type="text/ng-template">
           <h1>Hello People</h1>
-          <div data-boxes="rootPerson" class="boxes"></div>
+          <div data-boxes="rootPerson" class="rootPerson"></div>
           <div class="todos">
             <div ng-repeat="todo in todos" data-todo="todo" class="todo"></div>
           </div>
