--- a/static/index.html
+++ b/static/index.html
@@ -64,13 +64,15 @@
           </div>
         </script>
         <script id="todoView.html" type="text/ng-template">
-          <h4>Your Todos</h4>
-          <div ng-show="loadingTodos" class="loading">Loading your todos...</div>
-          <div ng-repeat="todo in todos.owned" data-todo="todo" data-dashboard="true" class="todo"><span>more replaces</span></div>
-          <h4>Watched Todos</h4>
-          <div ng-repeat="todo in todos.watching" data-todo="todo" data-dashboard="true" class="todo"><span>should be replaced</span></div><!-- .alerts
-          <h4>Alerts</h4>
-          <div ng-repeat="alert in alerts" data-alert="alert" class="alert"></div>-->
+          <div class="todos-view">
+            <h4>Your Todos</h4>
+            <div ng-show="loadingTodos" class="loading">Loading your todos...</div>
+            <div ng-repeat="todo in todos.owned" data-todo="todo" data-dashboard="true" class="todo"><span>more replaces</span></div>
+            <h4>Watched Todos</h4>
+            <div ng-repeat="todo in todos.watching" data-todo="todo" data-dashboard="true" class="todo"><span>should be replaced</span></div><!-- .alerts
+            <h4>Alerts</h4>
+            <div ng-repeat="alert in alerts" data-alert="alert" class="alert"></div>-->
+          </div>
         </script>
         <script id="personView.html" type="text/ng-template">
           <div class="person-view">
