--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,10 @@
         <div class="container"><a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a><a href="#" class="brand"><span>FamilyFound</span></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="/"><span>Todos</span></a></li>
-              <li><a href="/person/"><span>Tree</span></a></li>
-              <li><a href="https://github.com/familyfound/familyfound/issues" target="_blank"><span>Issues</span></a></li>
+              <li><a href="/person/"><span>Fan Chart</span></a></li>
+              <li><a href="/find-relation/"><span>How am I related?</span></a></li>
+              <li><a href="/to-dos/"><span>To-do List</span></a></li>
+              <li><a href="https://github.com/familyfound/familyfound/issues" target="_blank"><span>Report a Problem</span></a></li>
               <li><a href="https://github.com/familyfound/familyfound/" target="_blank" class="icon"><i class="icon-github icon-light"></i></a></li>
             </ul>
           </div>
@@ -63,12 +64,31 @@
             </div>
           </div>
         </script>
+        <script id="relatedView.html" type="text/ng-template">
+          <div class="related-view">
+            <h4>How am I related?</h4>
+            <p>
+              Enter a person's ID number below to find out how you are related to
+              them. If you are more than 10th cousins, we give up :) It would take
+              too long to surch further. This is primarily for remembering how you
+              are connected to someone you know is your ancestor.
+            </p>
+            <label>Person's ID
+              <input type="text" placeholder="This person must be deceased" ng-model="relatedPersonId">
+            </label>
+            <button ng-click="findRelationship()" class="btn btn-primary">Find Relationship</button>
+            <div ng-show="findingRelationship" class="loading-indicator">{{ numSearched }} people searched</div>
+          </div>
+        </script>
         <script id="todoView.html" type="text/ng-template">
           <div class="todos-view">
-            <h4>Your Todos</h4>
-            <div ng-show="loadingTodos" class="loading">Loading your todos...</div>
+            <h4>Your To-do Items</h4>
+            <div ng-show="loadingTodos" class="loading">Loading your to-do items...</div>
             <div ng-repeat="todo in todos.owned" data-todo="todo" data-dashboard="true" class="todo"><span>more replaces</span></div>
-            <h4>Watched Todos</h4>
+            <div ng-hide="todos.owned.length" class="no-todos">
+              <p>You don't have any saved to-do items! Use the chrome extension to keep track of things you want to do.</p>
+            </div>
+            <h4 ng-show="todos.watching.length">Watched To-do Items</h4>
             <div ng-repeat="todo in todos.watching" data-todo="todo" data-dashboard="true" class="todo"><span>should be replaced</span></div><!-- .alerts
             <h4>Alerts</h4>
             <div ng-repeat="alert in alerts" data-alert="alert" class="alert"></div>-->
@@ -77,9 +97,9 @@
         <script id="personView.html" type="text/ng-template">
           <div class="person-view">
             <div class="top"><span ng-hide="rootPerson.display.name" class="loading-person"><i class="icon-spin icon-refresh"></i>
-                <Loading>Tree</Loading></span><span ng-show="rootPerson.display.name" class="person-name">{{ rootPerson.display.name }} Tree</span><a href="https://familysearch.org/tree/#view=ancestor&amp;person={{rootPerson.id}}" target="_blank">View on FamilySearch.org</a><span class="loading">{{ ffapi.loaded }} / {{ ffapi.loading }}<i ng-show="ffapi.loading &gt; ffapi.loaded" class="icon-refresh icon-spin loading"></i></span>
+                <Loading>Tree</Loading></span><span ng-show="rootPerson.display.name" class="person-name">{{ rootPerson.display.name }} Tree</span><span class="loading">{{ ffapi.loaded }} / {{ ffapi.loading }}<i ng-show="ffapi.loading &gt; ffapi.loaded" class="icon-refresh icon-spin loading"></i></span>
               <div ng-click="clearCache()" data-toggle="tooltip" title="clear cached data" class="btn btn-warning"><i class="icon-refresh"></i></div>
-              <div class="pull-right"><a href="#" target="_blank" ng-class="{disabled: loadingPeople &gt; 0}" ng-click="downloadFan($event)" class="btn btn-primary">Download Fan Chart</a>
+              <div class="pull-right"><a href="#" target="_blank" ng-class="{disabled: loadingPeople &gt; 0}" ng-click="downloadFan($event)" class="btn btn-primary">{{ loadingPeople > 0 ? "Loading Fan Chart" : "Download Fan Chart" }}</a>
                 <!-- a.btn.btn-primary(href="#", target="_blank", ng-class="{disabled: loadingPeople > 0}", ng-mousedown="downloadPhotos($event)") Download Photos Chart-->
               </div>
             </div>
@@ -90,7 +110,7 @@
                   <h4>History</h4>
                   <div class="look-down">{{ focusedPerson.line.length }}<i class="icon-arrow-down"></i></div>
                   <div data-breadcrumb="focusedPerson.line" data-config="bcConfig"></div>
-                </div>
+                </div><a href="https://familysearch.org/tree/#view=ancestor&amp;person={{focusedPerson.id}}" target="_blank">View on FamilySearch.org</a>
                 <div ng-show="person" person-details="focusedPerson" class="person-details"></div>
               </div>
             </div>
